frontend/app/assets/stylesheets/archivesspace/header.less
.global-header {
  position:  relative;
  padding:  0 20px;
  .navbar {
    position: absolute;
    right:  0;
  }
  .navbar-inner {
    .border-radius(0 0 4px 4px);
  }
}

// header customisations

.navbar {
  margin-bottom: 0;
}

.navbar .brand {
  text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
  color: black;
  font-weight: bold;
}

.navbar .brand:hover {
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
}

// support input appended to navbar search field
.navbar .input-append, 
.navbar .input-prepend {
  margin-bottom: 0;
}

.navbar-search .input-append input {
  float: left;
}

.navbar .input-append .btn-group {
  display: inline-block;
  padding: 0;
  margin-top: 0;
}

.navbar .input-append .btn {
  margin-left: -1px !important;
  .border-radius(0px) !important;
}

.navbar .input-append .btn.last {
  .border-radius(0 3px 3px 0) !important;
}

.navbar .input-prepend .btn {
  margin-right: -1px;
}

// Login Form
.login .btn.btn-primary {
  width: 100%;
  margin-left: 0;
}

.login-message {
  display: none !important;
}

.error .login-message {
  display: block !important;
}

.login .alert-success {
  display: none;
}

#inlineLoginModal {
  width: 300px;
  margin-left: -150px;

  input {
    width: 250px;
  }
  .btn {
    width: 265px;
  }
}

// user logged in container
.repo-container,
.user-container {
  margin-left: 5px;

  .dropdown-toggle, .btn {
    margin-top: 5px !important;
  }
  .dropdown-menu {
    min-width: 80px;
  }
  .empty, .selected {
    color: #999;
  }

  .dropdown-submenu.pull-left {
    > .dropdown-menu {
      left: -140%;
      right: auto;
      min-width: 140%;
    }
  }
}
.user-label > span,
.repository-label > span {
  margin-right: 5px;
}

.repository-label.empty {
  background-color: #F99;
  padding: 0 0 0 5px;
  .border-radius(4px);
}

.dropdown-menu {
  .boring-link {
    display: inline;
    padding: 0;
    clear: none;
    font-weight: normal;
    line-height: @baseLineHeight;
    color: @linkColor;
    white-space: normal;
  }
}

.repository-header .navbar {
  .navbar-inner {
    margin: 0 -21px;
    .border-radius(4px 4px 0 0);
  }
}

header .inset-label {
  min-width: 100px;
}

// select-a-repository popover
.select-a-repository {
  ul {
    padding:  15px;
  }

  .btn-primary {
    width:  100%;
  }
}


@media (min-width: 768px) and (max-width: 979px) {
  .global-header,
  .repository-header {
    padding:  0;
    .navbar {
      position: relative;
      margin: 0 -20px;
      .navbar-inner {
        margin: 0;
      }
    }
  }
}
@media (max-width: 767px) {
  .global-header,
  .repository-header {
    padding: 0;
    .navbar {
      position: relative;
      margin: 0;
      .navbar-inner {
        margin: 0;
      }
    }
  }
}

/* inset label */
.inset-label {
  padding: 0 10px;
  height: 30px;
  display: inline-block;
  margin: 5px 0 -5px !important;
  .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
  #font > .sans-serif(13px, normal, 30px);
  margin-bottom: 0;
  background-color: #e9e9e9;
  overflow: hidden;
  max-width: 200px;
  .border-radius(4px);
}

.input-append {
  .inset-label {
    .box-shadow("inset -2px 0px 3px #CCC");
    .border-radius(4px 0 0 4px);
  }
}

.record-pane .inset-label {
  margin: 0 !important;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}


// Browser Warning
.browser-warning {
  margin-bottom: 0;

  .container {
    text-align: center;
  }
}

